# tetanus

./: .gitignore  Cargo.toml  README.md
.github/: build.workflow
sh/: watch.sh
src/: client.rs  main.rs
src/unix_shell/: mod.rs
src/windows_shell/: mod.rs
