[package]

name = "tetnus"
version = "0.1.0"
authors = ["Avery Wagar <avery@wagar.cc>"]

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.2", feature = ["um.winsock", "winuser", "um.winnt"]}
ws2_32-sys = "0.2.1"



[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"
