[package]

name = "tetnus"
version = "0.1.0"
authors = ["Avery Wagar <avery@wagar.cc>"]

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.6", features = ["winsock2", "winnt", "std"]}



[target.arm-unknown-linux-gnueabihf]
linker = "arm-linux-gnueabihf-gcc"

[target.i686-pc-windows-gnu]
linker = "i686-w64-mingw32-gcc"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
